# georef-ar-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-cli.txt  requirements.txt
src/georef_ar_py/: __init__.py  __main__.py  check.py  commands.py  constants.py  context.py  diff.py  exceptions.py  georequests.py  info.py  location.py  normalization.py  plotter.py  similar.py  territorial.py  utils.py
tests/: test_check.py  test_converter.py  test_diff.py  test_georequests.py  test_info.py  test_normalization.py  test_similar.py  test_territorial.py
tests/csv/: carrefour.csv
tests/response_api/: asentamientos.json  calles.json  departamentos.json  localidades-censales.json  localidades.json  municipios.json  provincias.gob.json  provincias.json  similar_bulk.json  similar_san_juan.json  territorial.json
