[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "georef-ar-py"
version = "0.0.5"
authors = [
  { name="Pablo E. Andino", email="pabloe.andino@gmail.com" },
]
description = "Paquete para consultas y procesamiento de respuestas sobre la API de georef-ar"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests ~= 2.29.0',
    'deepdiff ~= 6.3.0',
    'pandas == 2.0.2',
    'aiohttp ~= 3.8.3'
]

[project.optional-dependencies]
cli = [
    'click==8.1.3'
]

[project.urls]
"Homepage" = "https://github.com/pavloae/georef-ar-py"
"Bug Tracker" = "https://github.com/pavloae/georef-ar-py/issues"

[project.scripts]
geoarpy = "georef_ar_py.commands:cli"